// Copyright 2025 Notedown Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package notedown.nd.v1alpha1;

option go_package = "github.com/notedownorg/nd/api/v1alpha1;v1alpha1";

import "nodes/v1alpha1/types.proto";

service NodeService {
    rpc Stream(stream StreamRequest) returns (stream StreamEvent) {}
}

message StreamRequest {
    oneof request {
        Subscription subscription = 1;
        // Query query = 2;
        // Mutation mutation = 2;
    }
}

message Subscription {
    oneof subscription {
        DocumentSubscription document_subscription = 1;
        SectionSubscription section_subscription = 2;
    }
}

message DocumentSubscription {
    string subscription_id = 1;
}

message SectionSubscription {
    string subscription_id = 1;
}

message StreamEvent {
    oneof event {
        InitializationComplete initialization_complete = 1;
        Load load = 2;
        Change change = 3;
        Delete delete = 4;
    }
}

// Indicates the completion of the initialization of a subscribe request
message InitializationComplete {
    string subscription_id = 1;
}

// Indicates that a node has been loaded as part of a subscribe request
message Load {
    string subscription_id = 1;
    oneof node {
        Document document = 10;
        Section section = 11;
    }
}

// Indicates that a node has been created or updated
message Change {
    string subscription_id = 1;
    oneof node {
        Document document = 10;
        Section section = 11;
    }
}

// Indicates that a node has been deleted
message Delete {
    string subscription_id = 1;
    oneof node {
        string document_id = 10;
        string section_id = 11;
    }
}

